--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "firebase": "^9.18.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/react-modal": "^3.13.1"
   }
 }
